feat: swagger do Departamento
